# budgetmanager

./: .gitignore  README.md  azure-pipelines.yaml  budgetmanagerdb  docker-compose.yml
backend/: .dockerignore  Dockerfile  budgetmanagerdb  constraints.txt  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
backend/Accounts/: admin.py  models.py  serializers.py  serialzers.py  tests.py  urls.py  views.py
backend/Accounts/migrations/: 0001_initial.py  0002_initial.py  0003_account_currency.py  0004_account_deleted.py  0005_account_cash_security_models.py  0006_securityprice_updated_on.py
backend/Accounts/services/: portfolio_history.py  security_prices.py
backend/Currency/: apps.py  models.py  services.py  tests.py  urls.py  views.py
backend/Currency/migrations/: 0001_initial.py
backend/Templates/: admin.py  apps.py  models.py  serialzers.py  urls.py  views.py
backend/Templates/migrations/: 0001_initial.py  0002_alter_template_account_alter_template_category_and_more.py  0003_alter_template_type.py  0004_alter_template_account_alter_template_category_and_more.py  0005_alter_template_account_alter_template_category_and_more.py  (+4 more)
backend/Transactions/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py  views.py.bak
backend/Users/: models.py  serializers.py  urls.py  views.py
backend/budgetmanager/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: transactions_smoke_test.sh
backend/tags/: models.py  serializers.py
backend/tangible_assets/: admin.py  apps.py  models.py
(+138 files in other folders)
